k8s_nginx/game_rental_backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-rental-backend-deployment
  labels:
    app: my-app
    component: backend

spec:
  template:
    metadata:
      name: mybackend-pod
      labels:
        component: backend
        app: my-app
    spec:
      containers:
        - name: game-retnal-backend-container
          image: apispl/game_rental_backend_k8s
  replicas: 3
  selector:
    matchLabels:
      app: my-app
      component: backend
