k8s_nginx/game_rental_backend-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: game-rental-backend-clusterip

spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  
  selector:
    component: backend
    app: my-app
